com.unity.ar-companion-core@3.0.0-exp.3 ## [3.0.0-exp.3] - 2022-12-15 ### Changed - Update runtime serialization dependency to fix issues deserializing scenes with missing scripts
## [3.0.0-exp.2] - 2022-12-13
### Changed
- Update runtime serialization dependency to fix issues deserializing scenes with prefabs

## [3.0.0-exp.1] - 2022-11-18
### Changed
- Update minimum Unity version to 2021.3.0f1
- Update runtime serialization dependency to fix compatibility issues in Unity 2022.2 and above

--- a/Editor/Unity.AR.Companion.Core.Editor.asmdef
+++ b/Editor/Unity.AR.Companion.Core.Editor.asmdef
@@ -35,6 +35,11 @@
             "name": "com.unity.xr.object-capture",
             "expression": "0.0",
             "define": "OBJECT_CAPTURE_AVAILABLE"
+        },
+        {
+            "name": "com.unity.sharp-zip-lib",
+            "expression": "1.3",
+            "define": "UNITY_SHARPZIPLIB_1_3_OR_NEWER"
         }
     ],
     "noEngineReferences": false
